--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "cryptic-cave",
+  "name": "linkuni",
   "version": "1.0.0",
   "description": "",
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "cd api && node index.js",
+    "start": "node index.js",
     "build": "echo 'No build step required'",
     "test": "cross-env NODE_ENV=test jest --testTimeout=5000"
   },
